[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onethingai-pilot"
version = "0.1.0"
description = "Python SDK for OneThingAI cloud GPU platform"
readme = "README.md"
authors = [{ name = "OneThingAI", email = "support@onethingai.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.26.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/OnethingAI/onethingai-pilot"
Documentation = "https://github.com/OnethingAI/onethingai-pilot#readme"
Issues = "https://github.com/OnethingAI/onethingai-pilot/issues"

